[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "decam-tools"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "astropy",
    "astroquery",
    "matplotlib",
    "scipy",
]

[tool.setuptools]
script-files = [
    "scripts/sssb_snapshot",
    "scripts/extract_chip_decam"
]
